# parquet-summary

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  LICENCE.txt  README.md  main.cpp
